--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "docs"]
 	path = docs
-	url = https://github.com/HackThisSite/HackThisSite.wiki.git
+	url = git@github.com:HackThisSite/HackThisSite.wiki.git
