--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "docs"]
 	path = docs
-	url = https://github.com:HackThisSite/HackThisSite.wiki.git
+    url = https://github.com/HackThisSite/HackThisSite.wiki.git
 [submodule "vendor/bootstrap"]
 	path = vendor/bootstrap
 	url = https://github.com/twitter/bootstrap.git
